tests/rascal/negative/name_errors/L1/4_undecl-type.ob
MODULE Bla;

TYPE
  x = X;

VAR
  x: X;

BEGIN
  x := 1
END Bla.